# NovaMusic

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  dev.lunarsrl.NovaMusic.json  dev.riveroluna.NovaMusic.json  justfile  perf.data  test.perf  validate.sh
.github/workflows/: flatpak-builder.yml  rust.yml
i18n/cs/: nova_music.ftl
i18n/en/: cosmic_music.ftl  nova_music.ftl
i18n/es/: nova_music.ftl
repo/: summary  summary.idx
repo/refs/heads/app/dev.riveroluna.NovaMusic/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/runtime/dev.riveroluna.NovaMusic.Debug/x86_64/: master
repo/summaries/: 3d16a6fa37e78122d78d6639a20729614ee0f5390f05b920e8269ef912719d6d-cf4d661fe3efb22ef5a03f948780385cd5221580f24f594f12bc2c99bf558306.delta  8281a9f5ec4598ccad39d1c2ea4c0d78765da56610f9013019186e52b6f9836d-cf4d661fe3efb22ef5a03f948780385cd5221580f24f594f12bc2c99bf558306.delta  b7c94674588f45f77355b58966bdb594811a2289d308a575328f76d03c7d0d35-cf4d661fe3efb22ef5a03f948780385cd5221580f24f594f12bc2c99bf558306.delta  c378d538bfa4fad4a932d4f25341c3caf7988616e0b87af2efdf11a297652fd1-cf4d661fe3efb22ef5a03f948780385cd5221580f24f594f12bc2c99bf558306.delta
resources/: app.desktop  app.metainfo.xml  dev.lunarsrl.NovaMusic.desktop  dev.lunarsrl.NovaMusic.metainfo.xml  dev.riveroluna.NovaMusic.desktop  dev.riveroluna.NovaMusic.metainfo.xml
src/: app.rs  config.rs  database.rs  i18n.rs  log.rs  main.rs  mpris.rs  novasink.rs
src/app/: albums.rs  artists.rs  home.rs  page.rs  playback.rs  playlists.rs  queue.rs  scan.rs  search.rs  settings.rs  shuffle.rs  tracks.rs
src/app/page/: albums.rs  artists.rs  genre.rs  playlists.rs  tracks.rs
src/mpris/: player.rs
