[package]
name = "cosmic-music"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "A music player written in the libcosmic toolkit"
repository = "https://github.com/SRiverol/CosmicMusic.git"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }
log = "0.4.27"
humantime = "2.2.0"
fern = "0.7.1"
rodio = { version = "0.21.1", features = ["symphonia", "symphonia-all", "playback"], default-features=false }
tokio-stream = "0.1.17"
symphonia = {version = "0.5.4", features = ["all-codecs"]}
strum = "0.27.1"
strum_macros = "0.27.1"
rusqlite = "0.35.0"
event-listener-strategy = "0.5.4"
colored = "3.0.0"
futures = "0.3.31"
rayon = "1.10.0"
regex = "1.11.1"

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
